--- a/BlogProject/Views/Home/Index.cshtml
+++ b/BlogProject/Views/Home/Index.cshtml
@@ -9,7 +9,21 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
+    <link rel="stylesheet" href="~/Styles/LandingStyle.css" />
 </head>
 <body>
+    <div>
+        <span id="title">
+           <div>
+               <h1>Bloggy</h1>
+               <h1>Blogger</h1>
+           </div>
+        </span>
+        <span id="enter">
+            <div>
+                <a>Enter</a>
+            </div>
+        </span>
+    </div>
 </body>
 </html>
