fixed seed data

--- a/BlogProject/Views/Browse/Browse.cshtml
+++ b/BlogProject/Views/Browse/Browse.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     <nav>
-        <article><a>New Post</a></article>
+        <article><a href="">New Post</a></article>
         <section>
             @foreach (var category in ViewBag.Categories)
             {
