--- a/BlogProject/Views/Home/Index.cshtml
+++ b/BlogProject/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
         </span>
         <span id="enter">
             <div>
-                <a href="/Browse/Browse">Enter</a>
+                <a href="/Browse/BrowseAll">Enter</a>
             </div>
         </span>
     </div>
