--- a/BlogProject/Views/Browse/BrowseAll.cshtml
+++ b/BlogProject/Views/Browse/BrowseAll.cshtml
@@ -42,6 +42,12 @@
                             <p id="postTag">@postTag.Tag.Name</p>
                         }
                     </section>
+                    <form action="/Post/Edit/@post.PostId" method="get">
+                        <input type="submit" value="Edit" />
+                    </form>
+                    <form action="/Post/Delete/@post.PostId" method="post">
+                        <input type="submit" value="Delete" />
+                    </form>
                 </article>
             </a>
        }
