--- a/BlogProject/Views/Browse/BrowseByTag.cshtml
+++ b/BlogProject/Views/Browse/BrowseByTag.cshtml
@@ -29,21 +29,27 @@
     <div>
         @foreach (var post in Model)
         {
-            <a href="ViewPost/@post.PostId">
-                <article>
-                    <h2 id="postTitle">@post.Title</h2>
-                    <h3 id="postAuthor">@post.Author</h3>
-                    <h3 id="postDate">@post.PublishDate</h3>
-                    <h3 id="postCategory">@post.Category.Name</h3>
-                    <p id="postBody">@post.Body</p>
-                    <section id="tags">
-                        @foreach (var postTag in post.PostTags)
-                        {
-                            <p id="postTag">@postTag.Tag.Name</p>
-                        }
-                    </section>
-                </article>
-            </a>
+        <a href="ViewPost/@post.PostId">
+            <article>
+                <h2 id="postTitle">@post.Title</h2>
+                <h3 id="postAuthor">@post.Author</h3>
+                <h3 id="postDate">@post.PublishDate</h3>
+                <h3 id="postCategory">@post.Category.Name</h3>
+                <p id="postBody">@post.Body</p>
+                <section id="tags">
+                    @foreach (var postTag in post.PostTags)
+                    {
+                        <p id="postTag">@postTag.Tag.Name</p>
+                    }
+                </section>
+                <form action="/Post/Edit/@post.PostId" method="get">
+                    <input type="submit" value="Edit" />
+                </form>
+                <form action="/Post/Delete/@post.PostId" method="post">
+                    <input type="submit" value="Delete" />
+                </form>
+            </article>
+        </a>
         }
     </div>
 </body>
