--- a/BlogProject/Views/Post/Edit.cshtml
+++ b/BlogProject/Views/Post/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" method="post">
+        <form asp-action="Edit" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -36,8 +36,11 @@
                     }
                 </select>
             </div>
+            <div>
+                <input type="hidden" name="PostId" class="form-control" value="@Model.PostId" />
+            </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save Changes" class="btn btn-default" />
             </div>
         </form>
     </div>
