--- a/BlogProject/Views/Browse/ViewPost.cshtml
+++ b/BlogProject/Views/Browse/ViewPost.cshtml
@@ -9,6 +9,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>ViewPost</title>
+    <link rel="stylesheet" href="~/Styles/StyleSheet.css" />
 </head>
 <body>
     <article>
@@ -24,5 +25,6 @@
             }
         </section>
     </article>
+    <footer>&copy; 2019 Bloggy Blog </footer>
 </body>
 </html>
