--- a/BlogProject/Views/Home/Index.cshtml
+++ b/BlogProject/Views/Home/Index.cshtml
@@ -9,21 +9,25 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
+
     <link rel="stylesheet" href="~/Styles/LandingStyle.css" />
 </head>
 <body>
     <div>
         <span id="title">
-           <div>
-               <h1>Bloggy</h1>
-               <h1>Blogger</h1>
-           </div>
+            <div>
+                <h1>Bloggy</h1>
+                <h1>Blogger</h1>
+            </div>
         </span>
         <span id="enter">
             <div>
                 <a href="/Browse/BrowseAll">Enter</a>
             </div>
         </span>
+   
     </div>
+  
+    <footer>&copy; 2019 Bloggy Blog</footer>
 </body>
 </html>
