--- a/BlogProject/Views/Post/Edit.cshtml
+++ b/BlogProject/Views/Post/Edit.cshtml
@@ -8,6 +8,7 @@
 
 <h4>Post</h4>
 <hr />
+<link rel="stylesheet" href="~/Styles/GeneralStyle.css" />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit" method="post">
@@ -49,6 +50,8 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+<footer>&copy; 2019 Bloggy Blog</footer>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
