--- a/BlogProject/wwwroot/Styles/GeneralStyle.css
+++ b/BlogProject/wwwroot/Styles/GeneralStyle.css
@@ -1,1 +1,12 @@
-﻿
+﻿html {
+    background-color: cadetblue;
+}
+
+footer {
+    text-align: center;
+    margin-top: 16px;
+    margin-bottom: 32px;
+    background: #666;
+    color: #fff;
+    padding: 16px 0;
+}
