--- a/BlogProject/Views/Browse/BrowseByCategory.cshtml
+++ b/BlogProject/Views/Browse/BrowseByCategory.cshtml
@@ -9,6 +9,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Browse</title>
+    <link rel="stylesheet" href="~/Styles/StyleSheet.css" />
 </head>
 <body>
     <nav>
@@ -52,5 +53,6 @@
             </a>
         }
     </div>
+    <footer>&copy; 2019 Bloggy Blog </footer>
 </body>
 </html>
