--- a/BlogProject/Views/Post/Edit.cshtml
+++ b/BlogProject/Views/Post/Edit.cshtml
@@ -48,7 +48,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a href="/Browse/BrowseAll">Back to List</a>
 </div>
 <footer>&copy; 2019 Bloggy Blog</footer>
 
