--- a/BlogProject/Views/Browse/BrowseByTag.cshtml
+++ b/BlogProject/Views/Browse/BrowseByTag.cshtml
@@ -9,7 +9,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Browse</title>
-    <link rel="stylesheet" href="~/Styles/StyleSheet.css" />
+    <link rel="stylesheet" href="~/Styles/Browse.css" />
 </head>
 <body>
     <nav>
