fixed more links and css

--- a/BlogProject/Views/Browse/BrowseAll.cshtml
+++ b/BlogProject/Views/Browse/BrowseAll.cshtml
@@ -31,7 +31,7 @@
     <div id="body">
         @foreach (var post in Model)
         {
-            <a href="ViewPost/@post.PostId">
+            <a href="/Browse/ViewPost/@post.PostId">
                 <article class="post">
                     <h2 id="postTitle">@post.Title</h2>
                     <h3 id="postAuthor">@post.Author</h3>
